add function card0 to create and populate current weather elements in the DOM

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             <input name="location" type="text" id="cityInput" />
             <button type="button" onclick="weatherData()">
             <img
-                src="https://cdn-icons-png.flaticon.com/512/954/954591.png" class="img01" />
+                src="https://cdn-icons-png.flaticon.com/512/954/954591.png" id="img01" />
             </button>
         </div>
 
-
+        <!--
         <div class="card" id="weatherContainer01">
             <h4>
                 <p><span id="citylocation"></span><span id="country"></span></p>
@@ -32,7 +32,7 @@
                 <p><span id="date"></span></p>  
             </h5>      
         </div>
-
+    -->
 
     <script src="script.js"></script>
     </body>
